[package]
name = "subsproxy_polling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.183"
serde_derive = "1.0.183"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
